fix(mail): null-safe mailbox close on dialog close
Skip mailbox state updates when the player mailbox is not loaded.

fix(movement): try local avoidance before path failure reaction

Probe short crowd steps on failed paths, fall back to direct passable
targets, and keep definitive failures on the same timeout window.

fix(vip): disable incomplete STS membership path

Keep VIP char-select BM pack active, but stop starting STS and sending
the unfinished NP auth token until the STS flow is ready.

fix(movement): throttle chase destination move broadcasts

Limit SM_MOVE rebroadcasts while chasing so frequent target updates
do not restart the move stream every tick.

docs(vip): document VIP Game.dll patcher usage

Add bilingual notes for required source/out paths and bin64 install.

chore(vip): require explicit source and out paths

Drop machine-local defaults so the Game.dll VIP patcher stays portable.

fix(movement): keep chase slope stable without restarting animation

Allow direct slope steps under crowd pressure, and only restart move
animation when chase is not already running.

fix(movement): preserve slope during crowd avoidance

fix(vip): notify world icon state

fix(skill): stop cancelled casts from completing

perf(startup): load skill data in parallel

fix(path): finish failed npc home returns

chore(repo): relocate client patch and remove migration docs

fix(vip): package stable client patch

fix(ai): restore monster idle patrols

fix(vip): keep NP auth from blocking client stage

fix(skill): preserve npc movement across control effects

fix(skill): normalize target status names

fix(vip): sync account stage and client icon